--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cobe": "^0.6.5",
+    "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
     "next": "^16.0.10",
     "next-themes": "^0.4.6",
