--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cobe": "^0.6.5",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
+    "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
