--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.1",
     "cobe": "^0.6.5",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
